--- a/package.json
+++ b/package.json
@@ -1,64 +1,57 @@
 {
-  "name": "@mkoreo/reacttemplate",
+  "name": "@mkoreo/reactlibrarytemplate",
   "repository": {
-    "url": "git://github.com/MKoreo/ReactTemplate.git"
+    "url": "git://github.com/MKoreo/reactlibrarytemplate.git"
   },
   "publishConfig": {
     "registry": "https://npm.pgk.github.com/"
   },
   "version": "0.0.0",
-  "main": "dist/index.js",
+  "main": "dist/index",
   "type": "module",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect=0.0.0.0' DEBUG='reacttemplate:*' webpack serve --host 0.0.0.0 --config webpack.dev.babel.js",
-    "build": "webpack --config webpack.dev.babel.js",
-    "release": "webpack --config webpack.lib.babel.js",
+    "dev": "NODE_OPTIONS='--inspect=0.0.0.0' DEBUG='designsystem:*' webpack serve --host 0.0.0.0 --config webpack.dev.js",
+    "build": "npm i && webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "peerDependencies": {
-    "@radix-ui/colors": "^0.1.8",
-    "@stitches/react": "^1.2.6",
-    "react": "*",
-    "react-dom": "*"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@babel/register": "^7.16.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/register": "^7.16.9",
     "@types/lodash.merge": "^4.6.6",
-    "@types/node": "^17.0.5",
+    "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@types/webpack-env": "^1.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^10.2.0",
-    "css-loader": "^6.5.1",
-    "eslint": "^7.19.0",
+    "core-js": "^3.20.3",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.65.0",
+    "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1",
+    "webpack-dev-server": "^4.7.2",
     "webpack-merge": "^5.8.0"
   }
 }
